Поправил разметку в index.html

--- a/index.html
+++ b/index.html
@@ -547,7 +547,8 @@
 
     <!-- Google map-->
     <section class="section">
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A46ad6e51fd14b4bbb60e699fafdcc35a0ab40ba72507bf8bd3d8616cfc8331e5&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>      <footer class="section bg-default section-xs-type-1 footer-minimal">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A46ad6e51fd14b4bbb60e699fafdcc35a0ab40ba72507bf8bd3d8616cfc8331e5&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+        <footer class="section bg-default section-xs-type-1 footer-minimal">
             <div class="container">
                 <div class="row row-30 align-items-lg-center justify-content-lg-between">
                     <div class="col-lg-2">
